# Interleaving-Reasoning-Generation

./: .gitignore  README.md  pyproject.toml
SFT/: README.md  app.py  inferencer.py
SFT/data/: dataset_info.py  parquet_utils.py  t2i_dataset.py  transforms.py  video_utils.py  vlm_dataset.py
SFT/data/configs/: train_toy_dataset_stage1.yaml  train_toy_dataset_stage2yaml
SFT/data/interleave_datasets/: __init__.py  edit_dataset.py  interleave_t2i_dataset.py  multi_think_interleave_t2i_dataset.py
SFT/eval/vlm/: utils.py
SFT/eval/vlm/eval/mathvista/: calculate_score.py  evaluate_mathvista.py  extract_answer.py  extract_answer_mp.py  utilities.py
SFT/eval/vlm/eval/mmbench/: evaluate_mmbench.py
SFT/eval/vlm/eval/mme/: calculation.py  eval.py
SFT/eval/vlm/eval/mmmu/: data_utils.py  eval_utils.py  evaluate_mmmu.py  evaluate_mmmu_cot.py  main_eval_only.py
SFT/eval/vlm/eval/mmvet/: evaluate_mmvet.py
SFT/eval/vlm/eval/mmvp/: evaluate_mmvp.py
SFT/eval/vlm/eval/pope/: eval_pope.py  evaluate_pope.py
SFT/eval/vlm/eval/vqa/: evaluate_vqa.py  textvqa_eval.py
SFT/modeling/bagel/: bagel.py
SFT/run/: consolidate_checkpoint.py  convert_ema_to_bf16.py  merge_ema.py
SFT/run/train_toy_dataset_stage1/: run.sh
SFT/run/train_toy_dataset_stage2/: convert_ema_to_bf16.sh  run.sh
SFT/train/: fsdp_utils.py  pretrain_unified_navit.py
eval/: README.md
eval/multi_turn/tiif/: tiif_data_preprocessor.py  tiif_multi_turn_eval.py  tiif_multi_turn_gen.py
